GUI component under development
I decided to shift away from "pop-ups" randomly appearing on screen to simply clicking on the extension on the taskbar. I only have the welcome screen created, but it can be subject to change.

--- a/hackathon-react-app-bjbhdg/public/index.html
+++ b/hackathon-react-app-bjbhdg/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Spectacularly Terrible Captchas"
-      content="A small browser extension that pops up with terrible captachas for the user to laugh to."
+      content="A small browser extension that tasks users with terrible captachas for the user to laugh to."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
