--- a/hackathon-react-app-bjbhdg/public/index.html
+++ b/hackathon-react-app-bjbhdg/public/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    body {
+      background-color: azure;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+  </style>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
