Clean-up/One Last Console Warning Fixed
I moved the CSS for the page change button to the actual App.tsx file, since importing it from another folder seems a bit obtuse. In addition, a final console warning about not putting my app directly into the body of "index.html" was fixed.

--- a/hackathon-react-app-bjbhdg/public/index.html
+++ b/hackathon-react-app-bjbhdg/public/index.html
@@ -22,5 +22,7 @@
     <title>Spectacularly Terrible Captchas Web Browser Extension</title>
   </head>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <body id="root"></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
